--- a/landing.html
+++ b/landing.html
@@ -68,7 +68,7 @@
 							<section id="two" class="spotlights">
 								<section>
 									<a class="image">
-										<img src="https://i.ibb.co/vQc1qNY/IMG-0987.jpg" alt="" data-position="center center" />
+										<img src="IMG-0987.jpg" alt="" data-position="center center" />
 									</a>
 									<div class="content">
 										<div class="inner">
