--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         <img src="images/pic02.jpg" alt="" />
                     </span>
                     <header class="major">
-                        <h3><a href="files/Resume.pdf" class="link" download="Brinta_Kundu_Resume.pdf">Resume</a></h3>
+                        <h3><a href="files/Resume(3).pdf" class="link" download="Brinta_Kundu_Resume.pdf">Resume</a></h3>
                     </header>
                 </article>
                 <article>
