--- a/landing.html
+++ b/landing.html
@@ -60,7 +60,7 @@
 									<header class="major">
 										<h2></h2>
 									</header>
-									<p>I am currently attending Hunter College with a passion of Software Engineering. I am eager to learn more in pursuit of getting better.</p>
+									<p>I am currently attending Hunter College with a passion of Software Engineering. I am eager to learn more in pursuit of getting better.<br> Skills: Python, C++, Java, Html, Css, Data analysis  </p>
 								</div>
 							</section>
 
